# rust-dbms

./: .gitignore  Cargo.toml  README.md
examples/: btree-create.rs  btree-search-all.rs  btree-search-query.rs  btree-search-range.rs  disk_manager.rs  table-create.rs  table-plan.rs  table-search-all.rs  table-search-exact.rs  table-search-fullscan.rs  table-search-range.rs
src/: buffer.rs  disk.rs  lib.rs  slotted.rs  table.rs  tuple.rs
src/btree/: branch.rs  bsearch.rs  error.rs  leaf.rs  meta.rs  mod.rs  node.rs  pair.rs
src/query/: executor.rs  mod.rs  planner.rs
