[package]
name = "putty_db"
version = "0.1.0"
edition = "2021"
authors = ["wtchrs <wtchr_@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.199", features = ["derive"] }
thiserror = "1.0.59"
zerocopy = { version = "0.7.32", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
